--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "npm-p-test",
-  "version": "1.0.0",
+  "name": "npm-provenance-test1",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "release:publish": "changesets publish"
+    "release:publish": "changeset publish"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
