--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -28,6 +28,10 @@ jobs:
     - name: Install npm 9.5
       run: npm install -g npm@^9.5.0
 
+    - name: Install node modules
+      run: yarn install --frozen-lockfile
+      shell: bash
+
       # https://github.com/changesets/action#with-publishing
     - name: Handle Release Pull Request or Publish to npm
       id: changesets
