--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -44,3 +44,11 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         NPM_CONFIG_PROVENANCE: true
+
+      # Upload log files as an artifact
+    - name: Upload npm log files
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: npm-logs
+        path: /home/runner/.npm/_logs/*.log
