--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -29,11 +29,7 @@ jobs:
       run: npm install -g npm@^9.5.0
 
     - name: Install node modules
-      run: |
-        yarn install --frozen-lockfile
-        npm -v
-        npm whoami
-        npm config list
+      run: yarn install --frozen-lockfile
 
       # https://github.com/changesets/action#with-publishing
     - name: Handle Release Pull Request or Publish to npm
