--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,14 @@ jobs:
     - name: Install node modules
       run: yarn install --frozen-lockfile
 
+    - name: Creating .npmrc
+      run: |
+        cat << EOF > "$HOME/.npmrc"
+          //registry.npmjs.org/:_authToken=$NPM_TOKEN
+        EOF
+      env:
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       # https://github.com/changesets/action#with-publishing
     - name: Handle Release Pull Request or Publish to npm
       id: changesets
