--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "npm-provenance-test2",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
     "release:publish": "changeset publish"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wespickett/npm-prov-test.git"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
